--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .App-logo {
@@ -19,4 +21,11 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.square {
+  width: 10px;
+  height: 10px;
+  margin: 5px;
+  font-size: 8px;
 }
